# pose_setter

./: CMakeLists.txt  package.xml
include/nav_loc/: fun.hpp  nav_loc_node.hpp  pose.hpp
output/: config.yaml  final-voxel.pcd
src/: demo.cpp
